# plotjuggler

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  COMPILE.md  Dockerfile  Dockerfile-humble-appimage  README.md  package.xml  prepare_release.py  vcpkg.json
.devcontainer/: Dockerfile
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  debian.yaml  macos.yaml  ros2-humble.yaml  ros2-jazzy.yaml  ros2-rolling.yaml  snap_core22.yaml  snap_core24.yaml  ubuntu.yaml  windows.yaml
DEBIAN/: _control.24.04  _control.trixie
cmake/: download_wasmer.cmake  find_or_download_lua.cmake  find_wasmer.cmake
datasamples/: tree_leaf_parent_collision.csv
installer/: config.xml
installer/io.plotjuggler.application/meta/: package.xml
plotjuggler_app/: CMakeLists.txt  aboutdialog.ui  changelog_dialog.ui  curvelist_panel.cpp  curvetree_view.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_release_dialog.cpp  new_release_dialog.h  new_release_dialog.ui  plot_docker.cpp  plot_docker_toolbar.cpp  resource.qrc  support_dialog.ui  tabbedplotwidget.cpp  utils.cpp  wasm_parser.cpp  wasm_runtime.cpp  wasm_runtime.hpp
plotjuggler_app/resources/: plotjuggler.icns  stylesheet_dark.qss  stylesheet_light.qss
plotjuggler_app/resources/html/: about_window_body_rti.html  about_window_title_rti.html
plotjuggler_app/resources/macapp/: plotjuggler.plist
plotjuggler_base/include/PlotJuggler/: datastreamer_base.h  messageparser_base.h  plotdatabase.h  stringseries.h  timeseries.h
plotjuggler_plugins/: CMakeLists.txt
plotjuggler_plugins/DataLoadCSV/: CMakeLists.txt  dataload_csv.cpp
plotjuggler_plugins/DataLoadMCAP/: dialog_mcap.h
plotjuggler_plugins/DataLoadParquet/: dataload_parquet.cpp
plotjuggler_plugins/DataLoadULog/: dataload_ulog.cpp  ulog_parser.cpp
plotjuggler_plugins/DataStreamFoxgloveBridge/: CMakeLists.txt  PROTOCOL.md  foxglove_client.cpp  foxglove_client.h  foxglove_client.ui  foxglove_client_config.cpp  foxglove_client_config.h  foxglove_dialog.cpp  foxglove_dialog.h
plotjuggler_plugins/DataStreamMQTT/: datastream_mqtt.cpp  datastream_mqtt.h
plotjuggler_plugins/DataStreamPlotJugglerBridge/: CMakeLists.txt  README.md  websocket_client.cpp  websocket_client.h  websocket_client.ui  websocket_client_config.cpp  websocket_client_config.h  websocket_dialog.cpp  websocket_dialog.h
plotjuggler_plugins/DataStreamSample/: datastream_sample.cpp
plotjuggler_plugins/DataStreamSerialPort/: CMakeLists.txt  README.md  datastream_serialport.cpp  datastream_serialport.h  datastream_serialport.ui
plotjuggler_plugins/DataStreamZMQ/: datastream_zmq.cpp  datastream_zmq.h
plotjuggler_plugins/ParserDataTamer/: datatamer_parser.cpp
plotjuggler_plugins/ParserLineInflux/: line_parser.cpp
plotjuggler_plugins/ParserROS/rosx_introspection/include/rosx_introspection/: deserializer.hpp
plotjuggler_plugins/ParserROS/rosx_introspection/include/rosx_introspection/details/: conversion_impl.hpp
plotjuggler_plugins/ParserROS/rosx_introspection/src/: deserializer.cpp  ros_parser.cpp
plotjuggler_plugins/PluginsZcm/: dataload_zcm.cpp  datastream_zcm.cpp
plotjuggler_plugins/ToolboxQuaternion/: quaternion_to_rpy.h
snap_core24/: snapcraft.yaml
